Rename result file and update data loading

--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.ineor</groupId>
 	<artifactId>vat</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0.RELEASE</version>
 	<name>vat</name>
 	<description>Demo project for Spring Boot</description>
 
